inherit jsonconfig and uischema
